corrected line break in posts and comments, using ngSanitize and line break filter

--- a/ngapp/app/styles/main.css.scss
+++ b/ngapp/app/styles/main.css.scss
@@ -136,6 +136,3 @@ textarea.new-comment-input-box-content:focus:active:hover {
   position: relative;
   margin-left: 105px;
 }
-.card p {
-  white-space: pre-line;
-}
